--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #100E3F;
+    background-color: #FF7B7C;
     border-radius: 100px;
 }
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background-color: #5D9FA2;
-    color: #100E3F;
+    background-color: #83E1E6;
+    color: #152456;
 }
 
 header {
@@ -38,9 +39,12 @@ header {
     margin-left: 5em;
     cursor: pointer;
 }
+
 .logo:hover {
-    color: #F77368;
+    color: #FF7B7C;
+    scale: 110%;
 }
+
 .nav {
     display: flex;
     justify-content: center;
@@ -63,8 +67,10 @@ header {
 }
 
 .nav-text:hover {
-    color: #F77368;
+    color: #FF7B7C;
+    scale: 110%;
 }
+
 .burger {
     height: 70%;
 }
@@ -125,22 +131,40 @@ h1 {
 .btn-1 {
     height: 3em;
     font-size: 1em;
-    background-color: #F77368;
+    background-color: #FF7B7C;
     border-color: transparent;
     margin-right: 1em;
     cursor: pointer;
     font-weight: 600;
     width: 10em;
+    color: #152456;
+}
+
+.btn-1:hover {
+    color: #FF7B7C;
+    background-color: #152456;
+    scale: 110%;
+}
+
+.btn-1.borders {
+    border: 2px solid #152456;
 }
 
 .btn-2 {
     height: 3em;
     font-size: 1em;
     background-color: transparent;
-    border: 2px solid #100E3F;
+    border: 2px solid #152456;
     margin-right: 1em;
     cursor: pointer;
     font-weight: 600;
+    color: #152456;
+}
+
+.btn-2:hover {
+    color: #FF7B7C;
+    background-color: #152456;
+    scale: 110%;
 }
 
 .mid-section {
@@ -190,28 +214,28 @@ h1 {
 }
 
 .subsection-wrapper {
-    background-color: #ECECEC;
+    background-color: #90D2CE;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.subsection-wrapper-white {
-    background-color: white;
+.subsection-wrapper-light {
+    background-color: transparent;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.subsection-wrapper-dark {
-    background-color: #15171C;
+.subsection-wrapper-orange {
+    background-color: #FF7B7C;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #152456;
 }
 
 .subsection-lower {
@@ -277,7 +301,7 @@ h1 {
 
 .testimony {
     width: 100%;
-    background-color: #ECECEC;
+    background-color: #90D2CE;
 }
 
 .testimony-container {
@@ -315,13 +339,13 @@ h1 {
 }
 
 .work-wrapper {
-    background-color: #15171C;
+    background-color: #FF7B7C;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
     text-align: center;
+    color: #152456;
 }
 
 .work {
@@ -354,7 +378,7 @@ footer {
 
 .feedback {
     width: 70%;
-    background-color: #ECECEC;
+    background-color: #90D2CE;
     height: 100%;
     margin: auto;
 }
@@ -372,7 +396,7 @@ footer {
     width: 100%;
     text-align: left;
     padding-left: 2rem;
-    padding-top: 2rem;
+    padding-top: 1rem;
     font-weight: 400;
 }
 
