--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ a:active {
     align-items: center;
     margin-left: auto;
     height: 100%;
-    width: 25em;
-    margin-right: 5em;
+    width: 30em;
+    margin-right: 2em;
 }
 
 .nav-text {
@@ -78,9 +78,17 @@ a:active {
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
-    margin: auto;
     height: 80%;
     cursor: pointer;
+    margin-left: 1em;
+}
+
+.search-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 .burger {
@@ -146,7 +154,7 @@ a:active {
     text-align: left;
     margin-top: 4em;
     top: 0;
-    padding-top: 15vw;
+    padding-top: 8vw;
     padding-left: 5em;
 }
 
@@ -294,6 +302,17 @@ input.light {
     background-color: #90D2CE;
 }
 
+input.search-box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 10em;
+    height: 2em;
+    border: 2px solid #152456;
+    border-radius: 5px;
+    margin: 0;
+}
+
 .subsection-wrapper {
     background-color: #90D2CE;
     width: 100%;
@@ -328,7 +347,7 @@ input.light {
     justify-content: center;
     align-items: center;
     text-align: center;
-    gap: 2em;
+    gap: 3.5em;
 }
 
 .subsection-img {
@@ -458,14 +477,13 @@ footer {
 }
 
 .feedback {
-    width: 70%;
+    width: 100%;
     background-color: #90D2CE;
     height: 100%;
     margin: auto;
 }
 
 .feedback-text {
-    width: 100%;
     text-align: left;
     font-size: 1.4em;
     padding-left: 2rem;
@@ -474,7 +492,6 @@ footer {
 }
 
 .feedback-subtext {
-    width: 100%;
     text-align: left;
     padding-left: 2rem;
     padding-top: 1rem;
