--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ label {
 
 input[type="text"], [type="email"], [type="number"], [type="date"] {
     margin-top: 10px;
-    width: 70%;
+    width: 100%;
     height: 2em;
     background-color: #83E1E6;
     border: 2px solid #152456;
@@ -585,6 +585,10 @@ footer {
 
     .item-subsection {
         gap: 1em !important;
+    }
+
+    .subsection-column {
+        max-width: 80%;
     }
 
     .subsection-lower {
